2001-12-11  olicha  <olivier.chapuis@free.fr>

	* NEWS:
	* fvwm/commands.h:
	* fvwm/ewmh.{c,h} (ewmh_SetWorkArea):
	(ewmh_ComputeAndSetWorkArea):
	(ewmh_HandleDynamicWorkArea):
	(EWMH_GetWorkAreaIntersection):
	(EWMH_GetStrutIntersection):
	(get_intersection):
	* fvwm/ewmh_name.c (EWMH_SetDeskNames):
	* fvwm/function.{c,h}:
	* fvwm/fvwm.c (InitVariables):
	* fvwm/fvwm2.1:
	* fvwm/modconf.c (send_desktop_names):
	(CMD_Send_ConfigInfo):
	* fvwm/placement.c (get_next_x):
	(get_next_y):
	* fvwm/screen.h:
	* fvwm/virtual.{c,h} (CMD_DesktopName):
	(GetDesktopName):
	New command "DesktopName desk name" to define desktops names for
	the FvwmPager, the WindowList and ewmh compliant pagers.
	Desktops information (desk, desk name, working areas) is stored in a new
	list sub structure of Scr, DesktopsInfo. The head of the list contains
	generic information for desks that are not in the list.

	* fvwm/windowlist.c (get_desk_title):
	(CMD_WindowList):
	* fvwm/fvwm2.1:
	* NEWS:
	New window list options NoDeskNum, NoCurrentDeskTitle, TitleForAllDesks,
	NoNumInDeskTitle. Document these options and also the NoGeometry and
	NoGeometryInfo options.

	* fvwm/ewmh.c:
	* fvwm/ewmh_names.c:
	* fvwm/ewmh_icons.c:
	Added some static declarations

	* fvwm/ewmh_names.c (EWMH_SetVisibleName):
	It seems that UTF8 names should not be terminated by a 0

	* fvwm/ewmh.c (EWMH_SetClientListStacking):
	Set the stacking list in the good orders

2001-12-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* vms/config.h:
	* fvwm/functions.c:
	* fvwm/commands.h:
	* fvwm/builtins.c:
	* fvwm/borders.c:
	removed all MULTISTYLE ifdefs

	* fvwm/borders.c (RedrawTitle):
	fixed title drawing into relief

2001-12-08  olicha  <olivier.chapuis@free.fr>

	* fvwm/style.{c,h}:
	* fvwm/fvwm.h:
	* fvwm/update.{c,h}:
	* fvwm/window_flags.h:
	* fvwm/fvwm2.1:
	s/extended_window_name/indexed_window_name/i
	s/extended_icon_name/indexed_icon_name/i
	s/do_update_window_name/do_update_visible_window_name/